Enhance deploy_to_prod workflow by adding command to read recipes. Refactor recipe.js to improve variable replacement logic and add validation. Update vivino.json locators for consistency and accuracy, and refine regex expressions for better data extraction.

--- a/.github/workflows/deploy_to_prod.yml
+++ b/.github/workflows/deploy_to_prod.yml
@@ -27,4 +27,7 @@ jobs:
             # Le decimos al padre que actualice sus submódulos a la última versión
             /usr/bin/git submodule update --recursive --remote
             
+            # Ejecutar el comando para leer las recetas
+            docker exec listy_php php /var/www/bin/console recipe:readfolder
+            
             echo "✅ Submódulo actualizado en producción al instante."
