--- a/albums/apple.json
+++ b/albums/apple.json
@@ -100,7 +100,7 @@
     {
       "command": "regex",
       "input": "$INPUT",
-      "expression": "id([0-9]+)(?=\\?|/|$)|term=([0-9]+)(?=&|$)",
+      "expression": "/([0-9]+)(?:\\?|$)|id([0-9]+)(?=\\?|/|$)|term=([0-9]+)(?=&|$)",
       "output": {
         "name": "ID"
       },
