--- a/software/apple.json
+++ b/software/apple.json
@@ -94,7 +94,7 @@
     {
       "command": "regex",
       "input": "$INPUT",
-      "expression": "id([0-9]+)|term=([0-9]+)",
+      "expression": "/([0-9]+)(?:\\?|$)|id([0-9]+)(?=\\?|/|$)|term=([0-9]+)(?=&|$)",
       "output": {
         "name": "ID"
       },
