--- a/albums/apple.json
+++ b/albums/apple.json
@@ -100,7 +100,7 @@
     {
       "command": "regex",
       "input": "$INPUT",
-      "expression": "/([0-9]+)(?:\\?|$)|id([0-9]+)(?=\\?|/|$)|term=([0-9]+)(?=&|$)",
+      "expression": "(?<=id)[0-9]+|(?<=term\\=)[0-9]+|[0-9]{4,}$|[0-9]{4,}(?=\\?)",
       "output": {
         "name": "ID"
       },
