--- a/podcasts/apple.json
+++ b/podcasts/apple.json
@@ -92,7 +92,7 @@
     {
       "command": "regex",
       "input": "$INPUT",
-      "expression": "/([0-9]+)(?:\\?|$)|id([0-9]+)(?=\\?|/|$)|term=([0-9]+)(?=&|$)",
+      "expression": "([0-9]+)(?=\\?)",
       "output": {
         "name": "ID"
       },
