--- a/Engine/package.json
+++ b/Engine/package.json
@@ -1,6 +1,8 @@
 {
   "version": "20",
   "dependencies": {
+    "@github/copilot-sdk": "^0.1.16",
+    "agent-browser": "^0.5.0",
     "chalk": "^5.3.0",
     "lodash": "^4.17.21",
     "minimist": "^1.2.8",
