--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,21 @@ on:
     branches:
         - main
 jobs:
+  unit-tests:
+    name: unit-tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+
+      - name: Install dependencies
+        run: |
+            cd Engine
+            bun install
+
+      - name: Run Engine unit tests
+        run: bun test Engine/tests/
+
   test-recipes:
     name: test-recipes
     runs-on: ubuntu-latest
