--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,4 +35,6 @@ jobs:
             bun install
       
       - name: Test recipes
-        run: export DEBUG=true && bun test
+        run: |
+          export DEBUG=true
+          bun test albums/ anime/ artists/ beers/ boardgames/ books/ food/ generic/ manga/ movies/ podcasts/ recipes/ restaurants/ software/ songs/ tv_shows/ videogames/ wines/
