feat: autoRecipe — autonomous recipe generation with Copilot SDK agents (#37)
* Add working Copilot SDK autorecipe POC for footballkitarchive

* Stabilized implementation for test case footballkit

* Added better docs and tests with funko.com, still WIP

* feat: add DOM structure analysis for reliable loop selectors

- Add findConsecutiveParent() to analyze DOM and find consecutive siblings
- Include dom_structure in search evidence with loopBase selector
- Update author-autocomplete.md prompt to use dom_structure.loopBase
- Add validation warning when LLM uses wrong selector pattern
- Create CLI debugging tools: probe-dom, test-selector, suggest-selectors, patch-recipe
- Add /generated folder for auto-generated recipes
- Test recipe: funko_com.json now extracts all 6 results correctly

* Add system instructions

* Working funko, footballkitarchive

* feat(autoRecipe): Add semantic validation and API interception fallback

- Add semantic validation to detect when results don't match search query
- Add multi-query validation to catch false positives (static content)
- Add API interception fallback for JS-heavy sites (Algolia, etc.)
- Add captureApiOnLoad() method to EvidenceCollector
- Add buildApiRecipe() to generate capture_api_on_load + json_store_text recipes
- Add validation.js with validateSemanticMatch() and validateMultiQuery()
- Add intercept-api.js CLI tool for debugging API capture
- Add diagnose-recipe.js CLI tool for recipe diagnostics
- Add searchCapture.js utility for network interception
- Extend commands.js with capture_api_on_load and json_store_text commands
- Update author-autocomplete.md prompt with API-based recipe examples
- Update fixer.md prompt with API interception guidance

Fixes Fragrantica.com recipe generation - now correctly captures Algolia API
instead of scraping static carousel content.

* refactor: move autoRecipe-specific code out of Engine/src/

- Revert Engine/src/commands.js to main (remove browser_api_request,
  capture_api_on

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,4 +35,6 @@ jobs:
             bun install
       
       - name: Test recipes
-        run: export DEBUG=true && bun test
+        run: |
+          export DEBUG=true
+          find albums anime artists beers boardgames books food generic manga movies podcasts recipes restaurants software songs tv_shows videogames wines -name '*.test.js' | xargs bun test --timeout 30000
